--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,17 @@ button {
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
+    transition: all .2s ease-in-out;
+}
+button:hover {
+    transform: scale(1.1);
+}
+
+.bi { 
+    transition: all .2s ease-in-out;
+}
+.bi:hover {
+    transform: scale(1.1);
 }
 
 .container {
